initiate GET /estate/:id/stats end-to-end
