# handler/endpoints.go
@@ -11,7 +11,7 @@ import (
 	"github.com/lib/pq"
 )
 
-// Handler for the /estate endpoint
+// 1. Handler for POST `/estate` endpoint
 func (s *Server) CreateEstate(ctx echo.Context) error {
 	var request struct {
 		Width  int `json:"width"`
@@ -35,6 +35,7 @@ func (s *Server) CreateEstate(ctx echo.Context) error {
 	return ctx.JSON(http.StatusCreated, map[string]string{"id": id})
 }
 
+// 2. Handler for POST `/estate/:id/tree` endpoint
 func (s *Server) AddTreeToEstate(ctx echo.Context) error {
 	estateId := ctx.Param("id")
 	var request struct {
@@ -77,4 +78,18 @@ func (s *Server) AddTreeToEstate(ctx echo.Context) error {
 	}
 
 	return ctx.JSON(http.StatusCreated, map[string]string{"id": treeId})
+}
+
+// 3. Handler for GET `/estate/:id/stats` endpoint
+func (s *Server) GetEstateStats(ctx echo.Context) error {
+	estateId := ctx.Param("id")
+	stats, err := s.Repository.GetEstateStatsById(estateId)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			return ctx.JSON(http.StatusNotFound, map[string]string{"error": "Estate not found"})
+		}
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Failed to retrieve estate stats"})
+	}
+
+	return ctx.JSON(http.StatusOK, stats)
 }
